--- a/lide/bozena-rezab.html
+++ b/lide/bozena-rezab.html
@@ -53,26 +53,26 @@
     <meta http-equiv="content-security-policy" content="">
 		<link href="../_app/immutable/assets/_layout-6213fcf4.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/_page-a3426dfb.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/start-ef325819.js">
+		<link rel="modulepreload" href="../_app/immutable/start-615d19b9.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index-6738d5d5.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/singletons-8c1c4e73.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index-4904e76a.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/control-e7f5239e.js">
-		<link rel="modulepreload" href="../_app/immutable/components/pages/_layout.svelte-23a80ad5.js">
+		<link rel="modulepreload" href="../_app/immutable/components/pages/_layout.svelte-7c4052ad.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/stores-c14b6e90.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/stores-4b2dd576.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/bundle-ed756bf4.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/bundle-b471e389.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Transition-c93588f5.js">
-		<link rel="modulepreload" href="../_app/immutable/modules/pages/_layout.js-ccd297d4.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/_layout-8fc366c7.js">
+		<link rel="modulepreload" href="../_app/immutable/modules/pages/_layout.js-8f8fd1ce.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/_layout-d8eecca7.js">
 		<link rel="modulepreload" href="../_app/immutable/components/pages/lide/_slug_/_page.svelte-7e1f1688.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Avatar-c9862749.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Link-31d24f85.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/marked.esm-0b02a870.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index-616283e8.js">
-		<link rel="modulepreload" href="../_app/immutable/modules/pages/lide/_slug_/_page.js-ef0b1f16.js">
+		<link rel="modulepreload" href="../_app/immutable/modules/pages/lide/_slug_/_page.js-27a07bb6.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index-b40a4f3c.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/_page-e1eefcc9.js"><title>Bozena Rezab | Lidé | UTXO.23</title><!-- HEAD_svelte-uikxx2_START --><!-- HEAD_svelte-uikxx2_END -->
+		<link rel="modulepreload" href="../_app/immutable/chunks/_page-79783ad9.js"><title>Bozena Rezab | Lidé | UTXO.23</title><!-- HEAD_svelte-uikxx2_START --><!-- HEAD_svelte-uikxx2_END -->
 	</head>
   <body data-sveltekit-preload-data="hover">
     <div style="display: contents"  class="h-full w-full">
@@ -114,8 +114,8 @@
 <section class="relative mx-auto py-6 sm:py-10 px-6 max-w-7xl text-custom-darkpurple"><div class="mb-6 uppercase text-gray-500"><a href="/"><i class="fa-solid fa-arrow-left"></i> Zpět</a></div>
     <div class="sm:flex gap-10 mt-4"><div>
 
-<div class="w-64 h-64 text-center pb-4 m-auto"><div class="flip-card"><div class="flip-card-inner"><div class="flip-card-front bg-cover bg-center rounded-2xl" style="background-image: url(/img/default-avatar.png)"></div>
-        <div class="flip-card-back bg-cover bg=center rounded-2xl" style="background-image: url(/img/default-avatar.png)"></div></div></div></div>
+<div class="w-64 h-64 text-center pb-4 m-auto"><div class="flip-card"><div class="flip-card-inner"><div class="flip-card-front bg-cover bg-center rounded-2xl" style="background-image: url(https://spec.utxo.cz/23/photos/speakers/bozena-rezab-web.jpg)"></div>
+        <div class="flip-card-back bg-cover bg=center rounded-2xl" style="background-image: url(https://spec.utxo.cz/23/photos/speakers/bozena-rezab-web.jpg)"></div></div></div></div>
 
 
 
@@ -160,14 +160,14 @@
         <a href="https://www.ppmedia.cz/" target="_blank" rel="noreferrer"><img src="/img/pen-production-logo.svg" class="w-28 inline-block pb-2 ml-1" alt="Pen&Production"></a></div></div></div></div>
 
 
-		<script type="module" data-sveltekit-hydrate="9rxxc1">
-			import { start } from "../_app/immutable/start-ef325819.js";
+		<script type="module" data-sveltekit-hydrate="d1aco1">
+			import { start } from "../_app/immutable/start-615d19b9.js";
 
 			start({
 				env: {},
 				paths: {"assets":"","base":""},
-				target: document.querySelector('[data-sveltekit-hydrate="9rxxc1"]').parentNode,
-				version: "1681993508822",
+				target: document.querySelector('[data-sveltekit-hydrate="d1aco1"]').parentNode,
+				version: "1681993817922",
 				hydrate: {
 					node_ids: [0, 7],
 					data: [null,null],
